fixed shopping cart collapsing into hamburger menu on mobile devices

--- a/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
+++ b/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
@@ -37,7 +37,8 @@ p{
   #shopping-cart-head-link{
     padding: 0px, 5px, 0px, 5px;
     margin-left:10px;
-    border-left: 2px solid black;
+    float:right;
+    margin-top: 5px;
     a{
       margin-right:5px;
       margin-left: 10px;
@@ -269,7 +270,6 @@ padding-left:5px;
   margin-bottom: 20px;
   ul{
       list-style: none;
-
   }
   .edit-links{
     float:right;
